refactor : stream.toList 사용하도록 개선